--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ fieldset {
     margin: 14pt auto;
 }
 
-fieldset {
+fieldset, title{
     animation: fade-in-left 3s;
     animation-fill-mode: both;
 }
